src/pages/home/home.scss
page-home {

	.scroll-content{
		top: 75px;
		//margin-top: -80px;
	}
	.content-md,
	.content-ios{

		
		&:before{
			height: 75px;
			clip-path: none;
			//background: #eee;

		}
		background: $white;
	}


	.list-ios[search],
	.list-md[search]{
		// background: #662350;
		//border-bottom: 1px solid #ddd;
		padding: 5px 15px;
		margin: -80px -20px;


		.item-inner{
			border: none !important;
		}

		.item{
			border: none;

			ion-input{
				font-size: 2em;
				color: $black !important;
				font-weight: bold;

				.text-input::-webkit-input-placeholder{
					color: $black !important;
				}

				.text-input:focus::-webkit-input-placeholder{
					color: $warm-grey !important;
				}

			}

		}

	}


	.list-ios[venue],
	.list-md[venue]{
		margin-top: 100px;
		.item-inner{
			padding: 0;
			border: none !important;
		}
		ion-label{
			padding: 0;
			margin: 0;
		}

		.item{
			border: none;
			margin: 10px 0;
			background: $warm-grey no-repeat center center / cover;
			border-radius: 8px;
			display: flex;
			text-align: center;
			height: 200px;
			color: $white;
			padding: 40px;
			box-shadow: 0px 0px 7px 2px rgba($black, 0.5);

			&:before{
				content: " ";
				width: 100%;
				height: 100%;
				position: absolute;
				background: rgba($black, 0.3);
				z-index: 0;
				top: 0;
				left: 0;

			}

			h1{
				font-size: 1.2em !important;
				font-family: $brandonBlack;
				text-transform: uppercase;
				color: $white !important;
				text-align: center;
				white-space: normal;
				text-shadow: 0px 4px 10px rgba($black, 1), 0px 4px 30px rgba($black, 1);

			}

			p{
				color: rgba($white, 0.7);
				font-size: 1em;
				font-family: $OpenSans;
				font-style: italic;

			}


			.rating{
				padding: 10px;
				ion-icon{ color: $white; font-size: 1.5em;}
			}

			.venue-meta{
				position: relative;
				z-index: 1;
			}
		}

	}

	.item-label-fixed{ color: #fff;}

	.item-ios,
	.item-md{
		background: transparent;
		padding: 0;
	}
	.item-inner{
		border-bottom: 1px solid rgba(255,255,255,0.4) !important;
	}

}

